--- a/package.json
+++ b/package.json
@@ -18,7 +18,10 @@
     "react": "^19.1.0",
     "react-date-range": "^2.0.1",
     "react-dom": "^19.1.0",
+    "react-phone-input-2": "^2.15.1",
     "react-router-dom": "^7.5.0",
+    "react-select": "^5.10.1",
+    "react-select-country-list": "^2.2.3",
     "recharts": "^2.15.2"
   },
   "devDependencies": {
