--- a/package.json
+++ b/package.json
@@ -12,14 +12,31 @@
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
+    "@fortawesome/fontawesome-svg-core": "^6.7.2",
+    "@fortawesome/free-brands-svg-icons": "^6.7.2",
+    "@fortawesome/free-solid-svg-icons": "^6.7.2",
+    "@fortawesome/react-fontawesome": "^0.2.2",
     "@mui/icons-material": "^7.0.2",
     "@mui/material": "^7.0.2",
+    "antd": "^5.24.8",
+    "axios": "^1.8.4",
     "bootstrap": "^5.3.5",
+    "dayjs": "^1.11.13",
+    "font-awesome": "^4.7.0",
+    "formik": "^2.4.6",
+    "moment": "^2.30.1",
     "react": "^19.1.0",
+    "react-countup": "^6.5.3",
     "react-date-range": "^2.0.1",
+    "react-datepicker": "^8.3.0",
     "react-dom": "^19.1.0",
+    "react-hot-toast": "^2.5.2",
     "react-router-dom": "^7.5.0",
-    "recharts": "^2.15.2"
+    "react-select": "^5.10.1",
+    "react-slick": "^0.30.3",
+    "recharts": "^2.15.2",
+    "slick-carousel": "^1.8.1",
+    "yup": "^1.6.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
