--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-router-dom": "^7.5.0",
     "react-select": "^5.10.1",
     "react-slick": "^0.30.3",
+    "react-time-picker": "^7.0.0",
     "recharts": "^2.15.2",
     "slick-carousel": "^1.8.1",
     "yup": "^1.6.1"
