--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 COUPON_CREATE=http://localhost:4001/coupon/createcoupon
-# VITE_BASE_URL=http://192.168.1.10:4001/
-VITE_BASE_URL=http://localhost:4001/
+VITE_BASE_URL=http://192.168.1.16:4001/
+# VITE_BASE_URL=http://localhost:4001/
