--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "dayjs": "^1.11.13",
     "font-awesome": "^4.7.0",
     "formik": "^2.4.6",
+    "lodash": "^4.17.21",
     "moment": "^2.30.1",
     "react": "^19.1.0",
     "react-countup": "^6.5.3",
