--- a/.env
+++ b/.env
@@ -1,3 +1,11 @@
-COUPON_CREATE=http://localhost:4001/coupon/createcoupon
-VITE_BASE_URL=http://192.168.1.16:4001/
+# COUPON_CREATE=http://localhost:4001/coupon/createcoupon
+# VITE_BASE_URL=http://192.168.1.34:4001/ # Readbean IP
+VITE_BASE_URL=http://192.168.254.230:4001/  #Praveen IP
+#  VITE_BASE_URL=http://192.168.1.22:4001/  #Aitrel veer
+#VITE_BASE_URL=http://192.168.254.230:4001/  #airtle digi 5g
+
+
+
+
+
 # VITE_BASE_URL=http://localhost:4001/
