Refactor CSS styles for consistency across multiple pages

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,5 +1,6 @@
 {
     "recommendations": [
-        "akashagarwal.paste-and-compare"
+        "akashagarwal.paste-and-compare",
+        "github.copilot"
     ]
 }
